# compiler

./: test.c
rep4-1/: cal2_64.asm  cal_64.asm  rep4-1.md
rep4-1/compiler-examples-main/: CMakeLists.txt  README.md  calc.c  calc64.c  compile-m68k.c  compile.c  ending.09  ending.rs6k  error.txt  if.y  input.txt  intro.rs6k  print.c  s-calc-r.c  s-calc.c  s-code-09.c  s-code-arm-mac.c  s-code-intel-mac.c  s-code-intel-r.c  s-code-intel.c  s-code-intel64-mac-r.c  s-code-intel64-mac.c  s-code-llvm.c  s-code-m68k.c  s-code-ppc.c  s-code-print.c  s-code-rs6k-r.c  s-code-rs6k.c  s-code-sparc.c  s-compile.c  s-compile.h  s-input.txt  s-output.s.yacc  s-prefix.c  s-token.c  s-token.h  s-tree-compile.c  s-tree.c  s-yacc.y  test.sh  (+2 more)
rep8-1/: graph_8-1.drawio
week1/: rep1.c  rep1.ll  rep1.s  sample.c  sample.ll  sample.s
week2/: a.out  check_endian  check_endian.c  check_endian.s  check_endian_emt64.s  check_endian_i386.s  rep  test.c  test.s
week2/a.out.dSYM/Contents/Resources/DWARF/: a.out
week2/a.out.dSYM/Contents/Resources/Relocations/x86_64/: a.out.yml
week2/check_endian.dSYM/Contents/: Info.plist
week2/check_endian.dSYM/Contents/Resources/DWARF/: check_endian
week2/check_endian.dSYM/Contents/Resources/Relocations/x86_64/: check_endian.yml
week2/rep.dSYM/Contents/Resources/DWARF/: rep
week2/rep.dSYM/Contents/Resources/Relocations/x86_64/: rep.yml
week3/: test1.c  test2.c  test3.c
